			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01n: *********************************

BUG: (9/10/04, GVG) CrossLibCopy: not comparing attributes and wrong comparison for Exports
FIX: Extra code in Cell, NodeInst, PortInst, PortProto and Variable.

IMP/MAN: (9/10/04, GVG) New look@feel in CrossLibCopy dialog. Center column will display date comparison.
Two extra toggles were created to handle quiet mode and "date and content" comparison. Buttons "List Diff" and "Examine
Quietly" were removed

BUG: (9/10/04, GVG) Technology bits not being copied in TechPalette for transistors in Schematics.
Side effect: wrong name assigned. FIX: NodeInst.newInstance passes also techBits.

BUG: (9/10/04, GVG) Zero-width arcs didn't get correct angle while copying them.
FIX: ArcInst.newInstance passes def value for angles in case port points coincide

IMP: ErrorLog handles warning messages. Red dot icon when it is an error and yellow one when its just a warning

IMP: (9/10/04, SMR) In-line text editing starts the text selected.

IMP: (9/10/04, SMR) Creation of multiple cell-center nodes is disallowed.

BUG: (9/10/04, SMR) When instances in a cell are locked, moving more than one object
     erroneously invokes the locked-warning dialog.
FIX: In CircuitChanges.ManyMove.doIt() only check nodes that moved, not all in the cell.

IMP/MAN (9/10/04, RK) Allow user to control number of items printed in the error diagnostics.

IMP/MAN (9/10/04, RK) Reworked the NCC commands. The operation is now selected by the NCC preferences pane while the number of windows is selected by the menu.

BUG: (9/10/04, SMR) Arraying arcs doesn't copy their constraining properties.
FIX: Array code calls "copyPropertiesFrom()".

IMP/MAN: (9/10/04, SMR) Added David Harris's ROM generator.

BUG: (9/9/4, SMR) Area-erase doesn't work in schematics.
